--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <html>
-    <head>
-        <title>Babylon.js sample code</title>
-        <script src="https://cdn.babylonjs.com/babylon.js"></script>
-        <style>
-            body,#renderCanvas { width: 100%; height: 100%;}
-        </style>
-    </head>
+<head>
+    <title>Babylon.js sample code</title>
+    <script src="https://cdn.babylonjs.com/babylon.js"></script>
+    <style>
+        body,
+        #renderCanvas {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+</head>
+
 <body>
-    Hello World
     <canvas id="renderCanvas"></canvas>
+    <script>
+        const canvas = document.getElementById("renderCanvas");
+        const engine = new BABYLON.Engine(canvas, true);
+
+        const createScene = () => {
+            const scene = new BABYLON.Scene(engine);
+            scene.clearColor = new BABYLON.Color3.Black;
+
+            // カメラを追加
+            const alpha = Math.PI / 4;
+            const beta = Math.PI / 3;
+            const radius = 8;
+            const target = new BABYLON.Vector3(0, 0, 0);
+
+            const camera = new BABYLON.ArcRotateCamera("Camera", alpha, beta, radius, target, scene);
+            camera.attachControl(canvas, true);
+
+            // ライトを追加
+            const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
+
+            // キューブを追加
+            const box = BABYLON.MeshBuilder.CreateBox("box", {});
+            box.position.x = 0.5;
+            box.position.y = 1;
+
+            return scene;
+        }
+        const sceneToRender = createScene();
+        engine.runRenderLoop(() => {
+            sceneToRender.render();
+        })
+    </script>
 </body>
 </html>
