--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         const engine = new BABYLON.Engine(canvas, true);
 
         const createScene = () => {
+            // シーンを設定
             const scene = new BABYLON.Scene(engine);
             scene.clearColor = new BABYLON.Color3.Black;
 
@@ -38,12 +39,44 @@
             box.position.x = 0.5;
             box.position.y = 1;
 
-            return scene;
-        }
-        const sceneToRender = createScene();
-        engine.runRenderLoop(() => {
-            sceneToRender.render();
-        })
+            // マテリアルを設定
+            const boxMaterial = new BABYLON.StandardMaterial("material", scene);
+            boxMaterial.diffuseColor = BABYLON.Color3.Random();
+            box.material = boxMaterial;
+
+            box.actionManager = new BABYLON.ActionManager(scene);
+            box.actionManager.registerAction(
+                new BABYLON.ExecuteCodeAction(BABYLON.ActionManager.OnPickTrigger,
+                (evt) => {
+                    const sourceBox = evt.meshUnderPointer;
+
+                    sourceBox.position.x += 0.1;
+                    sourceBox.position.y += 0.1;
+
+                    boxMaterial.diffuseColor = BABYLON.Color3.Random();
+                }
+            ))
+
+            const ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 4, height: 4});
+            const xrPromise = scene.createDefaultXRExperienceAsync({
+                floorMeshes: [ground]
+            });
+            
+            return xrPromise.then((xrExperience) => {
+                console.log("Done, WebXR is enabled.");
+                return scene;
+            });
+
+            // return scene;
+        };
+
+        createScene().then(sceneToRender => {
+            engine.runRenderLoop(() => sceneToRender.render());
+        });
+        // const sceneToRender = createScene();
+        // engine.runRenderLoop(() => {
+        //     sceneToRender.render();
+        // })
     </script>
 </body>
 </html>
